# litamin2

./: CMakeLists.txt  ReadMe.md  package.xml
include/: Visualizer.h
include/dataloader/: dataset.hpp
include/fast_gicp/: time_utils.hpp
include/fast_gicp/gicp/: fast_gicp.hpp  fast_vgicp_voxel.hpp  lsq_registration.hpp
include/fast_gicp/gicp/impl/: fast_gicp_impl.hpp  lsq_registration_impl.hpp
include/fast_gicp/so3/: so3.hpp
include/litamin2/: litamin2.hpp  litamin2point2voxel.hpp  litamin2point2voxelnewton.hpp
include/litamin2/ceres_cost/: PoseSE3Parameterization.hpp  gicp_cost.hpp  litamin2_cost.hpp
include/litamin2/impl/: litamin2_impl.hpp  litamin2point2voxel_impl.hpp  litamin2point2voxelnewton_impl.hpp  tensor_product.h
src/: Visualizer.cpp
src/dataloader/: dataset.cpp
src/fast_gicp/gicp/: fast_gicp.cpp
src/litamin2/: litamin2.cpp  litamin2point2voxel.cpp  litamin2point2voxelnewton.cpp
test/: test_align_with_litamin2.cpp  test_align_with_litamin2point2voxel.cpp  test_align_with_litamin2point2voxelnewton.cpp  test_dataloader.cpp  test_kitti_align.cpp
